K8S/musicapp-delp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: musicapp-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: musicapp
  template:
    metadata:
      labels:
        app: musicapp
    spec:
      containers:
        - name: musicapp
          image: music_app:dev
---
apiVersion: v1
kind: Service
metadata:
  name: musicapp-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: musicapp
  ports:
    - name: musicapp
      protocol: TCP
      port: 80
      targetPort: 80
